--- a/DependencyInjection/src/main/resources/application.properties
+++ b/DependencyInjection/src/main/resources/application.properties
@@ -2,3 +2,10 @@ server.port=8585
 server.servlet.context-path=/brutech
 spring.devtools.restart.quite-period= 1000
 spring.devtools.restart.poll-interval= 2000
+
+management.endpoints.web.exposure.include=info, health, mappings
+management.info.env.enabled=true
+
+info.app.name= Brutech Spring Boot Dependency Injection
+info.app.description= Brutech Spring Boot Dependency Injection Project Solution 
+info.app.version= v1.1.0
